<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragments.UpdateItemFragment">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/item_image_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/item_image_label"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/update_item_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_image_label"
        android:layout_marginTop="24dp"
        android:minHeight="150dp"
        android:src="@drawable/ic_image" />

    <Button
        android:id="@+id/update_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_item_image_view"
        android:layout_centerHorizontal="true"
        android:text="@string/add_image_button_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_input_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_image_button"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/update_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name_label"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/subtract_quantity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/update_input_item_name"
        android:layout_marginTop="8dp"
        android:text="@string/subtract_quantity_button"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_item_quantity"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/update_input_item_name"
        android:layout_toEndOf="@id/subtract_quantity_button">

        <EditText
            android:id="@+id/update_item_quantity"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/item_quantity_label"
            android:inputType="number"
            android:maxLength="10"
            android:singleLine="true"
            android:text="@string/default_zero"
            android:textAlignment="center"/>
        <!--android:enabled="false" /> -->

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/add_quantity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_input_item_name"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/input_item_quantity"
        android:text="@string/add_quantity_button"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/update_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Update"
        android:layout_below="@id/subtract_quantity_button"

        />

</RelativeLayout>
</ScrollView>