<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:padding="8dp"
android:id="@+id/singleItem_row">

<ImageView
    android:id="@+id/item_image"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:minHeight="150dp"
    android:src="@drawable/ic_image" />

<RelativeLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    android:background="#D7EFF7"
    android:minHeight="150dp">

    <LinearLayout
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/item_name"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/quantityNcart"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_toEndOf="@id/name"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_quantity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/item_qty_label" />

        <TextView
            android:id="@+id/item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/item_qty"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:focusable="false"
            android:text="@string/cart_button_text" />
    </LinearLayout>
</RelativeLayout>
</LinearLayout>



